Sect 23 Post-SG

--- a/Mod 3/sect_23_calculus_gradient_descent/instructor/sect_23_Pt2-3_calculus_and_gradient_descent_SG.ipynb
+++ b/Mod 3/sect_23_calculus_gradient_descent/instructor/sect_23_Pt2-3_calculus_and_gradient_descent_SG.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "from fsds_100719.imports import *\n",
+    "from fsds.imports import *\n",
     "\n",
     "## Add py_files to path to import derivatives\n",
     "import os,sys\n",
@@ -1859,7 +1859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Notebook:** `fsds_pt_100719_cohort_notes/labs_from_class/sect_23_derivatives/sect_23_gradient_descent_step_size_lab_SG.ipynb`\n",
+    "- **Notebook:** `mod_3/sect_23/`\n",
     "\n",
     "- **Lesson**:\n",
     "    - https://learn.co/tracks/module-3-data-science-career-2-1/machine-learning/section-23-calculus/gradient-descent-step-sizes"
@@ -1924,7 +1924,7 @@
    "metadata": {},
    "source": [
     "# 🗓 Section 23 - Pt3: Gradient Descent in 3D\n",
-    "- 03/18/20"
+    "- 08/26/20"
    ]
   },
   {
@@ -1937,10 +1937,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "- Step size: we determine it by setting our learning rate\n",
-    "- Apply Gradient Descent- getting incorrect values for the the last function\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2039,13 +2036,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Update Rule:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Equation for Calculating RSS Partial Derivatives"
    ]
   },
@@ -2074,6 +2064,13 @@
     "\\frac{\\delta J}{\\delta b}J(m, b) & = \\boldsymbol{\\frac{\\delta J}{\\delta b}}(y - (mx + b))^2  &&\\text{partial derivative with respect to} \\textbf{ b}\\\\\n",
     "\\end{align}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Update Rule:\n"
    ]
   },
   {
@@ -2134,7 +2131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Notebook:** `fsds_pt_100719_cohort_notes/labs_from_class/sect_23_derivatives/sect_23_apply_gradient_descent_SG.ipynb`\n",
+    "- **Notebook:** `Mod 3>sect_23> dsc-applying-gradient-descent-lab-onl01-dtsc-pt-041320-master`\n",
     "\n",
     "- **Lesson**:\n",
     "    - https://learn.co/tracks/module-3-data-science-career-2-1/machine-learning/section-23-calculus/applying-gradient-descent-lab"
@@ -2274,7 +2271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.11"
   },
   "toc": {
    "base_numbering": 1,
