--- a/Mod 3/sect_24_regularization/instructor/sect_24_v2.1_Regularization_SG.ipynb
+++ b/Mod 3/sect_24_regularization/instructor/sect_24_v2.1_Regularization_SG.ipynb
@@ -21,10 +21,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Higher level concepts\n",
-    "    - \"Why did I just do this?\"\n",
-    "    \n",
-    "- "
+    "- What is the difference between fit_transform and transform in StandardScaler()?\n",
+    "\n",
+    "- What is happening exactly with “train_test_split”??\n",
+    "\n",
+    "- [Can we go over this lab? - Ridge and Lasso Regression](https://learn.co/tracks/module-3-data-science-career-2-1/machine-learning/section-24-feature-selection-ridge-and-lasso/ridge-and-lasso-regression-lab)\n",
+    "\n",
+    "\n",
+    "- [Can we go over the feature selection methodology towards the end?](https://learn.co/tracks/module-3-data-science-career-2-1/machine-learning/section-24-feature-selection-ridge-and-lasso/feature-selection-methods)\n",
+    "\n"
    ]
   },
   {
@@ -47,25 +52,6 @@
     "\n",
     "**APPLICATION:**\n",
     "- Practice turning repetitive code into flexible functions/loops\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-03-19T23:53:49.768123Z",
-     "start_time": "2020-03-19T23:53:49.765127Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install -U fsds_100719\n",
-    "from fsds_100719.imports import *\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "plt.style.use('seaborn-poster')"
    ]
   },
   {
@@ -294,11 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-19T23:53:50.040121Z",
-     "start_time": "2020-03-19T23:53:49.782915Z"
+     "end_time": "2020-08-27T00:17:08.091861Z",
+     "start_time": "2020-08-27T00:17:05.732580Z"
     }
    },
    "outputs": [
@@ -306,8 +292,223 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[i] Source url with details: https://www.kaggle.com/uciml/autompg-dataset\n"
+      "fsds v0.2.23 loaded.  Read the docs: https://fs-ds.readthedocs.io/en/latest/ \n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626\" ><caption>Loaded Packages and Handles</caption><thead>    <tr>        <th class=\"col_heading level0 col0\" >Handle</th>        <th class=\"col_heading level0 col1\" >Package</th>        <th class=\"col_heading level0 col2\" >Description</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                                <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row0_col0\" class=\"data row0 col0\" >dp</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row0_col1\" class=\"data row0 col1\" >IPython.display</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row0_col2\" class=\"data row0 col2\" >Display modules with helpful display and clearing commands.</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row1_col0\" class=\"data row1 col0\" >fs</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row1_col1\" class=\"data row1 col1\" >fsds</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row1_col2\" class=\"data row1 col2\" >Custom data science bootcamp student package</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row2_col0\" class=\"data row2 col0\" >mpl</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row2_col1\" class=\"data row2 col1\" >matplotlib</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row2_col2\" class=\"data row2 col2\" >Matplotlib's base OOP module with formatting artists</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row3_col0\" class=\"data row3 col0\" >plt</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row3_col1\" class=\"data row3 col1\" >matplotlib.pyplot</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row3_col2\" class=\"data row3 col2\" >Matplotlib's matlab-like plotting module</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row4_col0\" class=\"data row4 col0\" >np</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row4_col1\" class=\"data row4 col1\" >numpy</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row4_col2\" class=\"data row4 col2\" >scientific computing with Python</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row5_col0\" class=\"data row5 col0\" >pd</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row5_col1\" class=\"data row5 col1\" >pandas</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row5_col2\" class=\"data row5 col2\" >High performance data structures and tools</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row6_col0\" class=\"data row6 col0\" >sns</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row6_col1\" class=\"data row6 col1\" >seaborn</td>\n",
+       "                        <td id=\"T_a40ef470_e7fa_11ea_a8c9_4865ee12e626row6_col2\" class=\"data row6 col2\" >High-level data visualization library based on matplotlib</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x124ba8828>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[i] Pandas .iplot() method activated.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install -U fsds\n",
+    "from fsds.imports import *\n",
+    "import warnings\n",
+    "# warnings.filterwarnings('ignore')\n",
+    "\n",
+    "plt.style.use('seaborn-poster')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-27T00:17:48.572865Z",
+     "start_time": "2020-08-27T00:17:48.442642Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cylinders  displacement  horsepower  weight  acceleration  model year\n",
+       "0          8         307.0         130    3504          12.0          70\n",
+       "1          8         350.0         165    3693          11.5          70\n",
+       "2          8         318.0         150    3436          11.0          70\n",
+       "3          8         304.0         150    3433          12.0          70\n",
+       "4          8         302.0         140    3449          10.5          70"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -331,109 +532,44 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>mpg</th>\n",
-       "      <th>cylinders</th>\n",
-       "      <th>displacement</th>\n",
-       "      <th>horsepower</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>acceleration</th>\n",
-       "      <th>model year</th>\n",
-       "      <th>origin</th>\n",
-       "      <th>car name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>307.0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>3504</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>chevrolet chevelle malibu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>15.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>165</td>\n",
-       "      <td>3693</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>buick skylark 320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>18.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>318.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3436</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>plymouth satellite</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>16.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>304.0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>3433</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>amc rebel sst</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>17.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>302.0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>3449</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ford torino</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    mpg  cylinders  displacement  horsepower  weight  acceleration  \\\n",
-       "0  18.0          8         307.0         130    3504          12.0   \n",
-       "1  15.0          8         350.0         165    3693          11.5   \n",
-       "2  18.0          8         318.0         150    3436          11.0   \n",
-       "3  16.0          8         304.0         150    3433          12.0   \n",
-       "4  17.0          8         302.0         140    3449          10.5   \n",
-       "\n",
-       "   model year  origin                   car name  \n",
-       "0          70       1  chevrolet chevelle malibu  \n",
-       "1          70       1          buick skylark 320  \n",
-       "2          70       1         plymouth satellite  \n",
-       "3          70       1              amc rebel sst  \n",
-       "4          70       1                ford torino  "
+       "    mpg\n",
+       "0  18.0\n",
+       "1  15.0\n",
+       "2  18.0\n",
+       "3  16.0\n",
+       "4  17.0"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(274, 6), (118, 6), (274, 1), (118, 1)]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -442,11 +578,35 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "## Load the data\n",
-    "df = fs.datasets.load_autompg()\n",
+    "df = fs.datasets.load_autompg(verbose=False)\n",
     "\n",
     "y = df[['mpg']]\n",
     "X = df.drop(['mpg', 'car name', 'origin'], axis=1)\n",
-    "\n",
+    "display(X.head(),y.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-27T00:18:00.558795Z",
+     "start_time": "2020-08-27T00:18:00.552663Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(274, 6), (118, 6), (274, 1), (118, 1)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Perform test train split\n",
     "X_train , X_test, y_train, y_test = train_test_split(X, y, test_size=0.3,\n",
     "                                                     random_state=12)\n",
@@ -3386,7 +3546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.11"
   },
   "toc": {
    "base_numbering": 1,
