sect 25 assets added

--- a/Mod 3/sect_25_logistic_regression/instructor/sect_25_pt1_LogisticRegression_titanic-instructor.ipynb
+++ b/Mod 3/sect_25_logistic_regression/instructor/sect_25_pt1_LogisticRegression_titanic-instructor.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- online-ds-ft-100719\n",
-    "- 03/24/20"
+    "- online-ds-pt-041320\n",
+    "- 08/28/20"
    ]
   },
   {
@@ -25,16 +25,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "- Do we scale/normalize data for LogReg?\n",
-    "    - Test it out  \n",
-    "    \n",
-    "- Logistic Regression docstring/parameters\n",
-    "- `age_ordered, mod_income_ordered = zip(*sorted(zip(age ,mod_income.ravel()),key=lambda x: x[0]))`\n",
-    "- Transforming columns with sklearn\n",
-    "    - Column transformer\n",
-    "    - "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2813,7 +2804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.11"
   },
   "toc": {
    "base_numbering": 1,
