--- a/Mod 3/sect_25_logistic_regression/instructor/sect_25_pt2_LogisticRegression_titanic-SG.ipynb
+++ b/Mod 3/sect_25_logistic_regression/instructor/sect_25_pt2_LogisticRegression_titanic-SG.ipynb
@@ -2311,7 +2311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Confusion Matrix"
+    "## Confusion Matrix"
    ]
   },
   {
@@ -2329,14 +2329,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Examples"
+    "### Examples"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Simple"
+    "#### Simple"
    ]
   },
   {
@@ -2350,7 +2350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multiple Classes"
+    "#### Multiple Classes"
    ]
   },
   {
@@ -2364,7 +2364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### American Sign Language Classification Example\n",
+    "#### American Sign Language Classification Example\n",
     "\n",
     "https://github.com/MrGeislinger/ASLTransalation"
    ]
@@ -2394,7 +2394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Other Classification Metrics\n",
+    "### Other Classification Metrics\n",
     "- Using TP/TN/FP/FN, can calculate several other metrics to evaluate our model.\n",
     "\n",
     "- Metrics:\n",
@@ -4523,7 +4523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.11"
   },
   "toc": {
    "base_numbering": 1,
