sect 25-pt 2 updated

--- a/Mod 3/sect_25_logistic_regression/instructor/sect_25_pt1_LogisticRegression_titanic-instructor.ipynb
+++ b/Mod 3/sect_25_logistic_regression/instructor/sect_25_pt1_LogisticRegression_titanic-instructor.ipynb
@@ -621,8 +621,6 @@
     "df = fs.datasets.load_titanic(read_csv_kwds={'index_col':0})\n",
     "relevant_columns = ['Pclass', 'Age', 'SibSp', 'Fare', 'Sex', 'Embarked', 'Survived']\n",
     "df = df[relevant_columns]\n",
-    "# df.set_index('PassengerId',inplace=True)\n",
-    "# df.drop(['Name','Ticket','Cabin','Parch'],inplace=True,axis=1)\n",
     "df.head()"
    ]
   },
@@ -700,6 +698,7 @@
     }
    ],
    "source": [
+    "\n",
     "df['Survived'].value_counts(normalize=True,dropna=False)"
    ]
   },
@@ -1999,7 +1998,8 @@
     "ExecuteTime": {
      "end_time": "2020-08-28T22:51:06.257166Z",
      "start_time": "2020-08-28T22:51:06.230051Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
     "width": "256px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
