--- a/Mod 4/sect_35_bigdata_pyspark/Spark-041320pt-SG.ipynb
+++ b/Mod 4/sect_35_bigdata_pyspark/Spark-041320pt-SG.ipynb
@@ -290,7 +290,7 @@
     "\n",
     "5. **Copy and paste the url thats starts with 127.0.0.1 displayed in the terminal into your web browser.**\n",
     "    - NOTE to Windows users using Docker Toolbox:\n",
-    "        - change the ip address of the url displayed from `127.0.0.1` to ... (need to verify what i.p. address)\n",
+    "        - change the ip address of the url displayed from `127.0.0.1` to whatever is displayed when you enter `docker-machine ip default` into your terminal.\n",
     "\n",
     "\n",
     "6. **To stop the container, in you terminal hit Control+C or from Jupyter Notebook click Shutdown**\n",
