Updated sect 35 post-SG

--- a/Mod 4/sect_35_bigdata_pyspark/Spark-041320pt-Teacher-Version-JMI.ipynb
+++ b/Mod 4/sect_35_bigdata_pyspark/Spark-041320pt-Teacher-Version-JMI.ipynb
@@ -312,6 +312,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -679,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -695,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -729,10 +736,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f16f192b490>"
+       "<pyspark.sql.session.SparkSession at 0x7f16d4d916d0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,45 +750,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://55f9b4405c09:4040\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v3.0.1</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>local[*]</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>pyspark-shell</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<SparkContext master=local[*] appName=pyspark-shell>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sc"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
