Sect 36 updated post-sg

--- a/Mod 4/sect_36_recommendation_systems/lab/index-solution.ipynb
+++ b/Mod 4/sect_36_recommendation_systems/lab/index-solution.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        " ('timestamp', 'int')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root-mean-square error = 0.9968853671625669\n"
+      "Root-mean-square error = 0.9870357480675945\n"
      ]
     }
    ],
@@ -212,9 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
     "\n",
@@ -250,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +274,7 @@
        " Row(movieId=5, title='Father of the Bride Part II (1995)', genres='Comedy')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,16 +350,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pirate Radio (2009)'"
+       "'Penelope (2006)'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,9 +381,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(userId=3, recommendations=[Row(movieId=158783, rating=7.897210121154785), Row(movieId=5417, rating=6.463028907775879), Row(movieId=5485, rating=6.383975028991699), Row(movieId=2290, rating=6.261144638061523), Row(movieId=3786, rating=5.962806701660156)])]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "recommendations = model.recommendForAllUsers(5)\n",
     "recommendations.where(recommendations.userId == 3).collect()"
@@ -420,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -462,16 +484,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendation 1: Star Wars: Episode IV - A New Hope (1977)  | predicted score :5.517341136932373\n",
-      "Recommendation 2: Usual Suspects, The (1995)  | predicted score :5.442122936248779\n",
-      "Recommendation 3: In the Name of the Father (1993)  | predicted score :5.3851237297058105\n",
-      "Recommendation 4: Star Wars: Episode V - The Empire Strikes Back (1980)  | predicted score :5.381286144256592\n",
-      "Recommendation 5: Fight Club (1999)  | predicted score :5.361552715301514\n",
-      "Recommendation 6: Monty Python and the Holy Grail (1975)  | predicted score :5.347217559814453\n",
-      "Recommendation 7: Willy Wonka & the Chocolate Factory (1971)  | predicted score :5.328979969024658\n",
-      "Recommendation 8: Who Framed Roger Rabbit? (1988)  | predicted score :5.324649810791016\n",
-      "Recommendation 9: Clerks (1994)  | predicted score :5.305201530456543\n",
-      "Recommendation 10: Office Space (1999)  | predicted score :5.297811985015869\n"
+      "Recommendation 1: Spirited Away (Sen to Chihiro no kamikakushi) (2001)  | predicted score :5.745306015014648\n",
+      "Recommendation 2: Star Wars: Episode V - The Empire Strikes Back (1980)  | predicted score :5.562227249145508\n",
+      "Recommendation 3: Willy Wonka & the Chocolate Factory (1971)  | predicted score :5.539666652679443\n",
+      "Recommendation 4: Usual Suspects, The (1995)  | predicted score :5.528431415557861\n",
+      "Recommendation 5: Shawshank Redemption, The (1994)  | predicted score :5.528126239776611\n",
+      "Recommendation 6: Sunset Blvd. (a.k.a. Sunset Boulevard) (1950)  | predicted score :5.513940811157227\n",
+      "Recommendation 7: Star Wars: Episode IV - A New Hope (1977)  | predicted score :5.510596752166748\n",
+      "Recommendation 8: Silence of the Lambs, The (1991)  | predicted score :5.504412651062012\n",
+      "Recommendation 9: Lord of the Rings: The Fellowship of the Ring, The (2001)  | predicted score :5.488558292388916\n",
+      "Recommendation 10: Slumdog Millionaire (2008)  | predicted score :5.483628749847412\n"
      ]
     }
    ],
@@ -515,59 +537,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import surprise"
+    "# import surprise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting package metadata (current_repodata.json): done\n",
-      "Solving environment: done\n",
-      "\n",
-      "## Package Plan ##\n",
-      "\n",
-      "  environment location: /opt/conda\n",
-      "\n",
-      "  added / updated specs:\n",
-      "    - scikit-surprise\n",
-      "\n",
-      "\n",
-      "The following packages will be downloaded:\n",
-      "\n",
-      "    package                    |            build\n",
-      "    ---------------------------|-----------------\n",
-      "    scikit-surprise-1.1.1      |   py38hab2c0dc_1         626 KB  conda-forge\n",
-      "    ------------------------------------------------------------\n",
-      "                                           Total:         626 KB\n",
-      "\n",
-      "The following NEW packages will be INSTALLED:\n",
-      "\n",
-      "  scikit-surprise    conda-forge/linux-64::scikit-surprise-1.1.1-py38hab2c0dc_1\n",
-      "\n",
-      "\n",
-      "\n",
-      "Downloading and Extracting Packages\n",
-      "scikit-surprise-1.1. | 626 KB    | ##################################### | 100% \n",
-      "Preparing transaction: done\n",
-      "Verifying transaction: done\n",
-      "Executing transaction: done\n",
-      "\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%conda install -c conda-forge scikit-surprise"
+    "# %conda install -c conda-forge scikit-surprise"
    ]
   },
   {
