--- a/Mod 4/sect_36_recommendation_systems/sect_36_recommendation_systems_101620-SG.ipynb
+++ b/Mod 4/sect_36_recommendation_systems/sect_36_recommendation_systems_101620-SG.ipynb
@@ -420,6 +420,7 @@
      "end_time": "2020-10-16T22:22:33.704291Z",
      "start_time": "2020-10-16T22:22:33.689645Z"
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -495,6 +496,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:43:23.760164Z",
+     "start_time": "2020-10-16T23:43:23.744326Z"
+    },
     "slideshow": {
      "slide_type": "slide"
     }
