--- a/Mod 4/sect_36_recommendation_systems/lab/index.ipynb
+++ b/Mod 4/sect_36_recommendation_systems/lab/index.ipynb
@@ -50,26 +50,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:46:14.979920Z",
+     "start_time": "2020-10-16T23:46:08.897166Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# import necessary libraries\n",
-    "\n",
+    "from pyspark.sql import SparkSession\n",
     "\n",
     "# instantiate SparkSession object\n",
     "# spark = SparkSession.builder.master(\"local\").getOrCreate()\n",
+    "spark = SparkSession.builder.master(\"local\").getOrCreate()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:47:24.583551Z",
+     "start_time": "2020-10-16T23:47:22.927086Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------+------+---------+\n",
+      "|userId|movieId|rating|timestamp|\n",
+      "+------+-------+------+---------+\n",
+      "|     1|      1|   4.0|964982703|\n",
+      "|     1|      3|   4.0|964981247|\n",
+      "|     1|      6|   4.0|964982224|\n",
+      "|     1|     47|   5.0|964983815|\n",
+      "|     1|     50|   5.0|964982931|\n",
+      "|     1|     70|   3.0|964982400|\n",
+      "|     1|    101|   5.0|964980868|\n",
+      "|     1|    110|   4.0|964982176|\n",
+      "|     1|    151|   5.0|964984041|\n",
+      "|     1|    157|   5.0|964984100|\n",
+      "+------+-------+------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# read in the dataset into pyspark DataFrame\n",
-    "movie_ratings = None"
+    "movie_ratings = spark.read.csv(\"./data/ratings.csv\",header='true', inferSchema='true')\n",
+    "movie_ratings.limit(10).show()"
    ]
   },
   {
@@ -81,8 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:47:41.408739Z",
+     "start_time": "2020-10-16T23:47:41.402412Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -93,12 +132,14 @@
        " ('timestamp', 'int')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "movie_ratings.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,11 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:48:31.717800Z",
+     "start_time": "2020-10-16T23:48:31.705949Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "movie_ratings = None"
+    "movie_ratings = movie_ratings.drop('timestamp')\n"
    ]
   },
   {
@@ -136,21 +182,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:52:42.988973Z",
+     "start_time": "2020-10-16T23:52:32.008171Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from pyspark.ml.evaluation import RegressionEvaluator\n",
     "\n",
-    "from pyspark.ml.recommendation import ALS \n",
+    "from pyspark.ml.recommendation import ALS\n",
     "\n",
     "# split into training and testing sets\n",
-    "\n",
+    "(training, test) = movie_ratings.randomSplit([0.8,0.2])\n",
     "\n",
     "# Build the recommendation model using ALS on the training data\n",
     "# Note we set cold start strategy to 'drop' to ensure we don't get NaN evaluation metrics\n",
-    "\n",
-    "# fit the ALS model to the training set\n"
+    "als = ALS(coldStartStrategy='drop',userCol='userId',itemCol='movieId',\n",
+    "          ratingCol='rating')\n",
+    "# fit the ALS model to the training set\n",
+    "model = als.fit(training)\n"
    ]
   },
   {
@@ -167,21 +220,57 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:54:14.791656Z",
+     "start_time": "2020-10-16T23:54:00.678727Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root-mean-square error = 0.9968853671625669\n"
+      "+------+-------+------+----------+\n",
+      "|userId|movieId|rating|prediction|\n",
+      "+------+-------+------+----------+\n",
+      "|   133|    471|   4.0| 2.8647985|\n",
+      "+------+-------+------+----------+\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# importing appropriate library\n",
-    "\n",
-    "\n",
-    "# Evaluate the model by computing the RMSE on the test data\n"
+    "preds = model.transform(test)\n",
+    "preds.limit(1).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-16T23:55:15.458554Z",
+     "start_time": "2020-10-16T23:55:04.417765Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8873139577855825"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluator = RegressionEvaluator(labelCol='rating',)\n",
+    "evaluator.evaluate(preds)\n",
+    "# Evaluate the model by computing the RMSE on the test data"
    ]
   },
   {
@@ -198,22 +287,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:06:30.800895Z",
+     "start_time": "2020-10-16T23:59:07.198097Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder\n",
     "\n",
     "# initialize the ALS model\n",
-    "\n",
+    "als_model = ALS(coldStartStrategy='drop',userCol='userId',itemCol='movieId',\n",
+    "          ratingCol='rating')\n",
     "\n",
     "# create the parameter grid              \n",
-    "\n",
+    "params = ParamGridBuilder().addGrid(als_model.regParam, [0.01, 0.001, 0.1])\\\n",
+    "    .addGrid(als_model.rank,  [4, 10, 50]).build()\n",
     "\n",
     "# instantiating crossvalidator estimator\n",
     "\n",
-    "\n",
-    "# We see the best model has a rank of 50, so we will use that in our future models with this dataset\n"
+    "cv =CrossValidator(estimator=als_model,estimatorParamMaps=params,\n",
+    "                   evaluator=evaluator,parallelism=4)\n",
+    "# We see the best model has a rank of 50, so we will use that in our future models with this dataset\n",
+    "best_model = cv.fit(training)\n",
+    "best_model.bestModel.rank"
    ]
   },
   {
@@ -230,28 +340,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:09:55.726516Z",
+     "start_time": "2020-10-17T00:09:55.384253Z"
+    }
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[Row(movieId=1, title='Toy Story (1995)', genres='Adventure|Animation|Children|Comedy|Fantasy'),\n",
-       " Row(movieId=2, title='Jumanji (1995)', genres='Adventure|Children|Fantasy'),\n",
-       " Row(movieId=3, title='Grumpier Old Men (1995)', genres='Comedy|Romance'),\n",
-       " Row(movieId=4, title='Waiting to Exhale (1995)', genres='Comedy|Drama|Romance'),\n",
-       " Row(movieId=5, title='Father of the Bride Part II (1995)', genres='Comedy')]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------------------+--------------------+\n",
+      "|movieId|               title|              genres|\n",
+      "+-------+--------------------+--------------------+\n",
+      "|      1|    Toy Story (1995)|Adventure|Animati...|\n",
+      "|      2|      Jumanji (1995)|Adventure|Childre...|\n",
+      "|      3|Grumpier Old Men ...|      Comedy|Romance|\n",
+      "|      4|Waiting to Exhale...|Comedy|Drama|Romance|\n",
+      "|      5|Father of the Bri...|              Comedy|\n",
+      "+-------+--------------------+--------------------+\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "movie_titles = None\n",
+    "movie_titles = spark.read.csv(\"./data/movies.csv\",header='true',inferSchema='true')\n",
     "\n",
-    "movie_titles.head(5)"
+    "movie_titles.limit(5).show()"
    ]
   },
   {
@@ -265,18 +382,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:12:14.778027Z",
+     "start_time": "2020-10-17T00:12:14.673921Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------+------+\n",
+      "|userId|movieId|rating|\n",
+      "+------+-------+------+\n",
+      "|     1|      1|   4.0|\n",
+      "|     1|      3|   4.0|\n",
+      "+------+-------+------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "def name_retriever(movie_id, movie_title_df):\n",
-    "    pass"
+    "movie_ratings.limit(2).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:12:29.306927Z",
+     "start_time": "2020-10-17T00:12:29.244327Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "AnalysisException",
+     "evalue": "filter expression '`movieId`' of type int is not a boolean.;;\n!Filter movieId#86: int\n+- Relation[movieId#6526,title#6527,genres#6528] csv\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAnalysisException\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-5a389dd3a581>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmovie_titles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie_ratings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmovieId\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/spark/python/pyspark/sql/dataframe.py\u001b[0m in \u001b[0;36mfilter\u001b[0;34m(self, condition)\u001b[0m\n\u001b[1;32m   1459\u001b[0m             \u001b[0mjdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcondition\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1460\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcondition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mColumn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1461\u001b[0;31m             \u001b[0mjdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcondition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1462\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1463\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"condition should be string or Column\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9-src.zip/py4j/java_gateway.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1302\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1303\u001b[0m         \u001b[0manswer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgateway_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend_command\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1304\u001b[0;31m         return_value = get_return_value(\n\u001b[0m\u001b[1;32m   1305\u001b[0m             answer, self.gateway_client, self.target_id, self.name)\n\u001b[1;32m   1306\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/spark/python/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mdeco\u001b[0;34m(*a, **kw)\u001b[0m\n\u001b[1;32m    132\u001b[0m                 \u001b[0;31m# Hide where the exception came from that shows a non-Pythonic\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m                 \u001b[0;31m# JVM exception message.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 134\u001b[0;31m                 \u001b[0mraise_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconverted\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    135\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    136\u001b[0m                 \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/spark/python/pyspark/sql/utils.py\u001b[0m in \u001b[0;36mraise_from\u001b[0;34m(e)\u001b[0m\n",
+      "\u001b[0;31mAnalysisException\u001b[0m: filter expression '`movieId`' of type int is not a boolean.;;\n!Filter movieId#86: int\n+- Relation[movieId#6526,title#6527,genres#6528] csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:13:24.898066Z",
+     "start_time": "2020-10-17T00:13:24.878155Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Column<b'movieId'>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_titles.movieId"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:12:57.914322Z",
+     "start_time": "2020-10-17T00:12:57.910727Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def name_retriever(movie_id, movie_title_df):\n",
+    "    return movie_title_df.where(movie_title_df.movieId == movie_id).take(1)[0]['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:13:50.201809Z",
+     "start_time": "2020-10-17T00:13:50.198742Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# def name_retriever(movie_id, movie_title_df):\n",
+    "#     pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-17T00:13:50.916459Z",
+     "start_time": "2020-10-17T00:13:50.841566Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -301,13 +526,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-10-17T00:14:19.062Z"
+    }
+   },
    "outputs": [],
    "source": [
     "users = movie_ratings.select(als.getUserCol()).distinct().limit(1)\n",
     "userSubsetRecs = model.recommendForUserSubset(users, 10)\n",
-    "recs = userSubsetRecs.take(1)"
+    "recs = userSubsetRecs.take(1)\n",
+    "recs"
    ]
   },
   {
