Sect 37 updated post SG

--- a/Mod 4/sect_37_intro_to_time_series/instructor/sect_37_intro_to_time_series_crime-041320pt-SG.ipynb
+++ b/Mod 4/sect_37_intro_to_time_series/instructor/sect_37_intro_to_time_series_crime-041320pt-SG.ipynb
@@ -64,21 +64,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Intro to Time Series"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## References"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- [Pandas Timeseries Documentation](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html)\n",
     "- ['Timeseries Offset Aliases'](https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#timeseries-offset-aliases)\n",
@@ -90,7 +96,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Working with Time Series"
    ]
@@ -102,7 +110,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:14:54.497097Z",
      "start_time": "2020-10-21T22:14:52.551855Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -125,7 +134,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:14:54.502512Z",
      "start_time": "2020-10-21T22:14:54.499095Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -134,7 +144,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Creating a Time Series from a DataFrame"
    ]
@@ -146,7 +158,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:14:55.220247Z",
      "start_time": "2020-10-21T22:14:54.504773Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -163,7 +176,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:14:55.354250Z",
      "start_time": "2020-10-21T22:14:55.230334Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -173,14 +187,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Preparing Data for Time Series Visualization"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Index must be a `datetimeindex`"
    ]
@@ -192,7 +210,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:26:55.962737Z",
      "start_time": "2020-10-21T22:26:55.960513Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -201,7 +220,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> #### Queston: We need to make a datetime index from the CrimeDate and CrimeTime. How might we do that?"
    ]
@@ -213,7 +234,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:27:12.256392Z",
      "start_time": "2020-10-21T22:27:12.254280Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -227,7 +249,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:27:15.444802Z",
      "start_time": "2020-10-21T22:27:15.442512Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -241,7 +264,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:27:39.061855Z",
      "start_time": "2020-10-21T22:27:39.059777Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -255,7 +279,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:15:24.255358Z",
      "start_time": "2020-10-21T22:15:24.218528Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -272,7 +297,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:28:37.731137Z",
      "start_time": "2020-10-21T22:28:37.729276Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -288,7 +314,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:28:42.484977Z",
      "start_time": "2020-10-21T22:28:42.482697Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -302,7 +329,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:28:46.456362Z",
      "start_time": "2020-10-21T22:28:46.454272Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -316,7 +344,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:28:50.416272Z",
      "start_time": "2020-10-21T22:28:50.414296Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -330,7 +359,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:29:11.545420Z",
      "start_time": "2020-10-21T22:29:11.543211Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -356,7 +386,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:29:21.120222Z",
      "start_time": "2020-10-21T22:29:21.118064Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -365,7 +396,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Visualizing Time Series"
    ]
@@ -377,7 +410,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:29:37.422068Z",
      "start_time": "2020-10-21T22:29:37.419884Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -391,7 +425,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:29:41.575218Z",
      "start_time": "2020-10-21T22:29:41.573030Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -400,14 +435,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> #### Q: What went wrong? What are we looking at?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Resampling Time Series"
    ]
@@ -419,7 +458,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:29:45.813969Z",
      "start_time": "2020-10-21T22:29:45.811842Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -428,21 +468,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Time series Frequencies\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Pandas Frequency Aliases"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "https://pandas.pydata.org/pandas-docs/stable/user_guide/timeseries.html#timeseries-offset-aliases\n",
     "\n",
@@ -480,7 +526,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Compare Resampled ts"
    ]
@@ -493,6 +541,7 @@
      "end_time": "2020-10-21T22:31:58.131886Z",
      "start_time": "2020-10-21T22:31:58.129647Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -515,7 +564,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:33:16.312829Z",
      "start_time": "2020-10-21T22:33:16.310625Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -528,14 +578,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Visualize all CRIMES as \"D\" Freq"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> **Loop through CRIMES and resample and plot all crimes**"
    ]
@@ -548,6 +602,7 @@
      "end_time": "2020-10-21T22:33:35.578906Z",
      "start_time": "2020-10-21T22:33:35.576888Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -557,21 +612,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> What do we notice about the different time series? "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Slicing With Time Series"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Make sure you're index is sorted first'\n",
     "- Feed in 2 dates as strings for slicing.\n",
@@ -586,6 +647,7 @@
      "end_time": "2020-10-21T22:34:07.770389Z",
      "start_time": "2020-10-21T22:34:07.760535Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -597,7 +659,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Using Dictionaries for Time Series preprocessing"
    ]
@@ -609,7 +673,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:34:27.386561Z",
      "start_time": "2020-10-21T22:34:27.382935Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -630,7 +695,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:34:24.424117Z",
      "start_time": "2020-10-21T22:34:24.421879Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -639,7 +705,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Visualize all ts with the differnet requency codes"
    ]
@@ -652,6 +720,7 @@
      "end_time": "2020-10-21T22:19:36.814678Z",
      "start_time": "2020-10-21T22:19:34.649755Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -671,7 +740,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Save Final TS and `ts_df`"
    ]
@@ -683,7 +754,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:34:57.733760Z",
      "start_time": "2020-10-21T22:34:57.731606Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -697,7 +769,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:03.161422Z",
      "start_time": "2020-10-21T22:35:03.159614Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -714,7 +787,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:05.460828Z",
      "start_time": "2020-10-21T22:35:05.458660Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -728,7 +802,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:08.130275Z",
      "start_time": "2020-10-21T22:35:08.128073Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -742,7 +817,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:10.059893Z",
      "start_time": "2020-10-21T22:35:10.057639Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -751,7 +827,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> More columns would benefit from ffill than bfill so we are going to ffill and then dropna to remove the few days at the beginning of 2014 without data"
    ]
@@ -763,7 +841,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:14.323484Z",
      "start_time": "2020-10-21T22:35:14.321541Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -779,7 +858,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:30.925296Z",
      "start_time": "2020-10-21T22:35:30.923435Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -795,7 +875,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:33.425486Z",
      "start_time": "2020-10-21T22:35:33.423377Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -809,7 +890,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:35.924481Z",
      "start_time": "2020-10-21T22:35:35.922352Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -818,35 +900,45 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Time Series Trends"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Types of Trends"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<img src=\"https://raw.githubusercontent.com/learn-co-students/dsc-removing-trends-online-ds-ft-100719/master/images/new_trendseasonal.png\" width=80%>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Stationarity"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<div style=\"text-align:center;font-size:2em\">Mean</div>\n",
     "    \n",
@@ -865,7 +957,8 @@
      "end_time": "2020-10-21T22:35:41.338635Z",
      "start_time": "2020-10-21T22:35:41.330559Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -920,7 +1013,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:35:54.553579Z",
      "start_time": "2020-10-21T22:35:54.551740Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -931,21 +1025,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> Since our AD Fuller Test p-value is > .05 we conclude that we have non-stationary data. So now what??"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Removing Trends"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Trend Removal Methods\n",
     "- Log-Transformation (`np.log`)\n",
@@ -963,7 +1063,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:15:30.909041Z",
      "start_time": "2020-10-21T22:15:30.566669Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -987,7 +1088,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:00.241076Z",
      "start_time": "2020-10-21T22:36:00.239055Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1001,7 +1103,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:02.694039Z",
      "start_time": "2020-10-21T22:36:02.691905Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1015,7 +1118,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:06.783127Z",
      "start_time": "2020-10-21T22:36:06.781259Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1029,7 +1133,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:18.981877Z",
      "start_time": "2020-10-21T22:36:18.979831Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1043,7 +1148,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:22.508283Z",
      "start_time": "2020-10-21T22:36:22.506422Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1053,7 +1159,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Seasonal Decomposition"
    ]
@@ -1066,6 +1174,7 @@
      "end_time": "2020-10-21T22:22:33.099511Z",
      "start_time": "2020-10-21T22:22:32.481165Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1081,7 +1190,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:37.944463Z",
      "start_time": "2020-10-21T22:36:37.942374Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1095,7 +1205,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:39.628694Z",
      "start_time": "2020-10-21T22:36:39.626456Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1109,7 +1220,8 @@
     "ExecuteTime": {
      "end_time": "2020-10-21T22:36:41.043196Z",
      "start_time": "2020-10-21T22:36:41.041096Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1194,7 +1306,7 @@
   "toc": {
    "base_numbering": 1,
    "nav_menu": {},
-   "number_sections": false,
+   "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
