--- a/Mod 4/sect_38_time_series_models/sarima_models_lab/index-solution.ipynb
+++ b/Mod 4/sect_38_time_series_models/sarima_models_lab/index-solution.ipynb
@@ -201,14 +201,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-23T22:36:50.370048Z",
-     "start_time": "2020-10-23T22:36:50.366881Z"
+     "end_time": "2020-10-23T23:36:23.514307Z",
+     "start_time": "2020-10-23T23:36:23.508408Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0, 0, 12),\n",
+       " (0, 0, 1, 12),\n",
+       " (0, 1, 0, 12),\n",
+       " (0, 1, 1, 12),\n",
+       " (1, 0, 0, 12),\n",
+       " (1, 0, 1, 12),\n",
+       " (1, 1, 0, 12),\n",
+       " (1, 1, 1, 12)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the p, d and q parameters to take any value between 0 and 2\n",
     "p = d = q = range(0, 2)\n",
@@ -217,7 +235,8 @@
     "pdq = list(itertools.product(p, d, q))\n",
     "\n",
     "# Generate all different combinations of seasonal p, q and q triplets\n",
-    "pdqs = [(x[0], x[1], x[2], 12) for x in list(itertools.product(p, d, q))]"
+    "pdqs = [(x[0], x[1], x[2], 12) for x in list(itertools.product(p, d, q))]\n",
+    "pdqs"
    ]
   },
   {
