--- a/Mod 4/sect_41_deep_neural_networks/sect_41_deeper_neural_networks_SG.ipynb
+++ b/Mod 4/sect_41_deep_neural_networks/sect_41_deeper_neural_networks_SG.ipynb
@@ -19,6 +19,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Announcements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are approaching the Mod 4 Project, here is the schedule for the remainder of the boot camp.\n",
+    "\n",
+    "#### NOVEMBER\n",
+    "- Friday 11/06:\n",
+    "    - Section 42: Optimizing Neural Networks\n",
+    "\n",
+    "\n",
+    "- Wednesday 11/11:\n",
+    "    - **Flatiron Closed for Veteran's Day.**\n",
+    "    - No one on ones or study group. \n",
+    "    \n",
+    "    \n",
+    "- Friday 11/13:\n",
+    "    - **We will kick off the Mod 4 Project**.\n",
+    "\n",
+    "\n",
+    "- **We will have Mod 4 Project Office Hours** on:\n",
+    "    - Wednesday 11/18\n",
+    "    - Friday 11/20\n",
+    "    - Wednesday 11/25.\n",
+    "\n",
+    "\n",
+    "- Friday 11/27:\n",
+    "    - **Flatiron is closed for Thanksgiving**\n",
+    "    - No one on ones or study group.\n",
+    "    \n",
+    "\n",
+    "- **11/30 - 12/05 BREAK WEEK!!**\n",
+    "    - No study group, one on ones, or project reviews. \n",
+    "\n",
+    "#### DECEMBER\n",
+    "\n",
+    "- Wednesday 12/09:\n",
+    "    - **Section 43: Operationalizing Code and AWS**\n",
+    "    \n",
+    "    \n",
+    "- Friday 12/11:\n",
+    "    - **Capstone Kick-Off!**\n",
+    "\n",
+    "\n",
+    "- **We will have Capstone Project Office Hours** on:\n",
+    "    - Wednesday 12/16\n",
+    "    - Friday 12/18\n",
+    "    - Wednesday 12/23\n",
+    "    \n",
+    "    \n",
+    "- **12/28 - 01/02 HOLIDAY BREAK!!**\n",
+    "\n",
+    "#### JANUARY 2021\n",
+    "\n",
+    "- **We will have Capstone Project Office Hours** on:\n",
+    "    - Wednesday 01/06\n",
+    "    - Friday 01/08\n",
+    "    - Wednesday 01/13\n",
+    "    - Friday 01/15\n",
+    "    - Wednesday 01/20\n",
+    "    - Friday 01/22\n",
+    "\n",
+    "\n",
+    "- **Capstone Project Reviews**\n",
+    "    - 01/23/2021 - 02/05/20201\n",
+    "    \n",
+    "    \n",
+    "- **02/05/2021: Hard Deadline for Graduation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Learning Objectives"
    ]
   },
