--- a/Mod 4/sect_41_deep_neural_networks/sect_41_deeper_neural_networks_SG.ipynb
+++ b/Mod 4/sect_41_deep_neural_networks/sect_41_deeper_neural_networks_SG.ipynb
@@ -33,6 +33,11 @@
     "    - Section 42: Optimizing Neural Networks\n",
     "\n",
     "\n",
+    "> - **Saturday 11/07 - 11/09: **I will be out of office (moving)**\n",
+    "    - No one on ones.\n",
+    "    \n",
+    "    \n",
+    "\n",
     "- Wednesday 11/11:\n",
     "    - **Flatiron Closed for Veteran's Day.**\n",
     "    - No one on ones or study group. \n",
@@ -89,7 +94,8 @@
     "    - 01/23/2021 - 02/05/20201\n",
     "    \n",
     "    \n",
-    "- **02/05/2021: Hard Deadline for Graduation**"
+    "- **02/05/2021: Hard Deadline for Graduation**\n",
+    "___"
    ]
   },
   {
@@ -240,8 +246,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-21T16:15:36.318870Z",
-     "start_time": "2020-10-21T16:15:35.297921Z"
+     "end_time": "2020-11-05T00:09:46.498524Z",
+     "start_time": "2020-11-05T00:09:45.545758Z"
     }
    },
    "outputs": [],
@@ -272,8 +278,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-21T16:15:37.903679Z",
-     "start_time": "2020-10-21T16:15:37.677011Z"
+     "end_time": "2020-11-05T00:09:48.432304Z",
+     "start_time": "2020-11-05T00:09:48.203231Z"
     }
    },
    "outputs": [
