Update Mod 4 Project Kick-Off.ipynb

--- a/Mod 4/mod_4_final_project/Mod 4 Project Kick-Off.ipynb
+++ b/Mod 4/mod_4_final_project/Mod 4 Project Kick-Off.ipynb
@@ -450,6 +450,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Office Hours Material"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Add questions to the questions gdoc:\n",
+    "    - https://docs.google.com/document/d/196yIMNSRSRspBdBmjHq7vMhFF-YdpvkyYEHYV5nm8xg/edit?usp=sharing\n",
+    "    \n",
+    "- We will cover some of the appendix sections during office hours as requested by the group/vote."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rubic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The pdf of the rubric is missing from the project repo. \n",
+    "- I have added a pdf copy to this repository\n",
+    "    - `Mod 4 > mod_4_final_project >Module 4 - Final Project Review - Data Science Online - Rubric.pdf`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Thinking of Recommendations "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- If you're having trouble thinking of recommendations for the powerpoint and in your notebook:\n",
+    "    - Consider making model-based recommendations.\n",
+    "        - Assume your audience wants to make their own model. What would you advise them to do or to avoid?\n",
+    "        "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
